infra/k8s/overlays/live/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: hello-live
    networking.gke.io/managed-certificates: hello-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: py.gingerninja.co
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: hello-world-live
            port:
              number: 80
